# drf_organizations_catalog

./: README.md  manage.py  pyproject.toml  requirements.txt
data/: positions.txt
org_catalog/: asgi.py  local.py  settings.py  urls.py  wsgi.py
organizations/: admin.py  forms.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
organizations/migrations/: 0001_initial.py  0002_set_default_types_and_positions.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
